--- a/config/config.env
+++ b/config/config.env
@@ -1,2 +1,4 @@
 NODE_ENV=development
 PORT=5000
+
+MONGO_URI=mongodb+srv://123:123@devcamper.wkzof.mongodb.net/devcamper?retryWrites=true&w=majority
