--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Aleksey Varov",
   "license": "ISC",
   "dependencies": {
+    "colors": "^1.4.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.24",
