--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.24",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "slugify": "^1.4.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
