--- a/config/config.env
+++ b/config/config.env
@@ -2,3 +2,6 @@ NODE_ENV=development
 PORT=5000
 
 MONGO_URI=mongodb+srv://123:123@devcamper.wkzof.mongodb.net/devcamper?retryWrites=true&w=majority
+
+GEOCODER_PROVIDER=mapquest
+GEOCODER_API_KEY=1Sxq8TGMQSHQ5NyQhZlaAN23D7yvvSXA
