--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "mongoose": "^5.9.24",
     "morgan": "^1.10.0",
+    "node-geocoder": "^3.27.0",
     "slugify": "^1.4.4"
   },
   "devDependencies": {
