--- a/config/config.env
+++ b/config/config.env
@@ -5,3 +5,17 @@ MONGO_URI=mongodb+srv://123:123@devcamper.wkzof.mongodb.net/devcamper?retryWrite
 
 GEOCODER_PROVIDER=mapquest
 GEOCODER_API_KEY=1Sxq8TGMQSHQ5NyQhZlaAN23D7yvvSXA
+
+FILE_UPLOAD_PATH= ./public/uploads
+MAX_FILE_UPLOAD=1000000
+
+JWT_SECRET=hhj4h545h4j5hj45h5j4h545
+JWT_EXPIRE=30d
+JWT_COOKIE_EXPIRE=30
+
+SMTP_HOST=smtp.mailtrap.io
+SMTP_PORT=2525
+SMTP_EMAIL=794c138f087a26
+SMTP_PASSWORD=1ac09039f173de
+FROM_EMAIL=noreply@devcamper.io
+FROM_NAME=DevCamper
